# cui

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  Makefile  README.md  main.c
.githooks/: pre-commit
.github/workflows/: ci.yml
include/pages/: app_page.h  corners_page.h  page_shell.h  showcase_page.h  todo_page.h
include/system/: ui_runtime.h
include/ui/: ui_button.h  ui_checkbox.h  ui_context.h  ui_element.h  ui_fps_counter.h  ui_hrule.h  ui_image.h  ui_layout_container.h  ui_pane.h  ui_scroll_view.h  ui_segment_group.h  ui_slider.h  ui_text.h  ui_text_input.h  ui_window.h
include/util/: fail_fast.h  string_util.h
scripts/: capture_app_window.sh
src/pages/: corners_page.c  page_shell.c  showcase_page.c  todo_page.c
src/system/: ui_runtime.c
src/ui/: ui_button.c  ui_checkbox.c  ui_context.c  ui_element.c  ui_fps_counter.c  ui_hrule.c  ui_image.c  ui_layout_container.c  ui_pane.c  ui_scroll_view.c  ui_segment_group.c  ui_slider.c  ui_text.c  ui_text_input.c  ui_window.c
src/util/: fail_fast.c  string_util.c
tests/: ui_hierarchy_tests.c
